<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.espertech</groupId>
		<artifactId>esper-parent</artifactId>
		<version>9.0.0</version>
	</parent>
	<properties>
		<rootPath>${project.parent.basedir}</rootPath>
	</properties>
	<name>Esper Common</name>
	<artifactId>esper-common</artifactId>
	<packaging>jar</packaging>
	<inceptionYear>2005</inceptionYear>
	<url>http://www.espertech.com/esper</url>
	<licenses>
		<license>
			<name>GNU General Public License Version 2</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/espertechinc/esper.git</url>
		<developerConnection>scm:git:git@github.com:espertechinc/esper.git</developerConnection>
		<connection>scm:git:git@github.com:espertechinc/esper.git</connection>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus snapshot repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Sonatype Nexus release repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<developers>
		<developer>
			<id>espertech</id>
			<name>EsperTech</name>
			<email>info@espertech.com</email>
			<url>http://www.espertech.com</url>
			<organization>EsperTech</organization>
			<organizationUrl>http://www.espertech.com</organizationUrl>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>${slf4j-api.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>${reload4j.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-connector-java.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>${hamcrest-core.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<!-- <showDeprecation>true</showDeprecation> -->
					<skip>false</skip>
					<useIncrementalCompilation>false</useIncrementalCompilation>
					<compilerArgument>-XDignore.symbol.file</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skip>false</skip>
					<argLine>-Xms512m -Xmx512m</argLine>
					<includes>
						<include>**/Test*.java</include>
					</includes>
					<excludes>
						<exclude>**/TestManual*.java</exclude>
						<exclude>**/Test*$*</exclude>
					</excludes>
					<systemProperties>
						<property>
							<name>log4j.configuration</name>
							<value>log4j.xml</value>
						</property>
					</systemProperties>
					<additionalClasspathElements>
						<additionalClasspathElement>${basedir}/etc</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>empty-javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<classifier>javadoc</classifier>
							<classesDirectory>${basedir}/javadoc</classesDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.plugin.version}</version>
				<configuration>
					<quiet>true</quiet>
					<additionalparam>--allow-script-in-comments</additionalparam>
					<windowtitle>Esper Common API Documentation</windowtitle>
					<footer><![CDATA[
						<small><b>&copy; 2006-2024 EsperTech Inc.<br/>All rights reserved.<br/>Visit us at <a href='http://www.espertech.com' target=3_blank'>espertech.com</a></b></small>
						]]></footer>
					<groups>
						<group>
							<title>Esper Common Public API Packages</title>
							<packages>com.espertech.esper.common.client*</packages>
						</group>
						<group>
							<title>Esper Common Internal Packages</title>
							<packages>com.espertech.esper.common.internal*</packages>
						</group>
					</groups>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven.bundle.plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>com.espertech.esper.common.*</Export-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven.dependency.plugin.version}</version>
				<configuration>
					<outputDirectory>lib</outputDirectory>
					<excludeTransitive>true</excludeTransitive>
					<artifactItems>
						<artifactItem>
							<groupId>org.slf4j</groupId>
							<artifactId>slf4j-api</artifactId>
							<version>${slf4j-api.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.slf4j</groupId>
							<artifactId>slf4j-reload4j</artifactId>
							<version>${slf4j-reload4j.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.hamcrest</groupId>
							<artifactId>hamcrest-core</artifactId>
							<version>${hamcrest-core.version}</version>
   						</artifactItem>
						<artifactItem>
							<groupId>ch.qos.reload4j</groupId>
							<artifactId>reload4j</artifactId>
							<version>${reload4j.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>mysql</groupId>
							<artifactId>mysql-connector-java</artifactId>
							<version>${mysql-connector-java.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>junit</groupId>
							<artifactId>junit</artifactId>
							<version>${junit.version}</version>
						</artifactItem>
						<artifactItem>
							<groupId>org.mockito</groupId>
							<artifactId>mockito-all</artifactId>
							<version>${mockito.version}</version>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>		
		</plugins>
	</build>
</project>
